more instruction cleanup

--- a/mirror/requirements.txt
+++ b/mirror/requirements.txt
@@ -1,14 +1,281 @@
-pyyaml
-openai
-langchain
-google-search-results
-chromadb
-tiktoken
-unstructured[local-inference]
-black
-sounddevice
-numpy
-requests
-wavio
-keyboard
-playsound
+aiohttp==3.8.4
+aiosignal==1.3.1
+antlr4-python3-runtime==4.9.3
+anyio==3.6.2
+argilla==1.6.0
+async-timeout==4.0.2
+attrs==23.1.0
+backoff==2.2.1
+black==23.3.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+chromadb==0.3.21
+click==8.1.3
+clickhouse-connect==0.5.20
+commonmark==0.9.1
+contourpy==1.0.7
+cryptography==40.0.2
+cycler==0.11.0
+dataclasses-json==0.5.7
+Deprecated==1.2.13
+duckdb==0.7.1
+effdet==0.3.0
+et-xmlfile==1.1.0
+fastapi==0.95.1
+filelock==3.12.0
+fonttools==4.39.3
+frozenlist==1.3.3
+google-search-results==2.4.2
+h11==0.14.0
+hnswlib==0.7.0
+httpcore==0.16.3
+httptools==0.5.0
+httpx==0.23.3
+huggingface-hub==0.13.4
+idna==3.4
+iopath==0.1.10
+Jinja2==3.1.2
+joblib==1.2.0
+keyboard==0.13.5
+kiwisolver==1.4.4
+langchain==0.0.146
+layoutparser==0.3.4
+lxml==4.9.2
+lz4==4.3.2
+Markdown==3.4.3
+MarkupSafe==2.1.2
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
+matplotlib==3.7.1
+-e git+ssh://git@github.com/crosleythomas/MirrorGPT.git@b6f9fd51f49b7e97fd04184a6aadee458a974f36#egg=MirrorGPT
+monotonic==1.6
+mpmath==1.3.0
+msg-parser==1.2.0
+multidict==6.0.4
+mypy-extensions==1.0.0
+networkx==3.1
+nltk==3.8.1
+numexpr==2.8.4
+numpy==1.23.5
+olefile==0.46
+omegaconf==2.3.0
+openai==0.27.4
+openapi-schema-pydantic==1.2.4
+opencv-python==4.6.0.66
+openpyxl==3.1.2
+packaging==23.1
+pandas==1.5.3
+pathspec==0.11.1
+pdf2image==1.16.3
+pdfminer.six==20221105
+pdfplumber==0.9.0
+Pillow==9.5.0
+platformdirs==3.2.0
+playsound==1.3.0
+portalocker==2.7.0
+posthog==3.0.1
+pycocotools==2.0.6
+pycparser==2.21
+pydantic==1.10.7
+Pygments==2.15.1
+pyobjc==9.1.1
+pyobjc-core==9.1.1
+pyobjc-framework-Accessibility==9.1.1
+pyobjc-framework-Accounts==9.1.1
+pyobjc-framework-AddressBook==9.1.1
+pyobjc-framework-AdServices==9.1.1
+pyobjc-framework-AdSupport==9.1.1
+pyobjc-framework-AppleScriptKit==9.1.1
+pyobjc-framework-AppleScriptObjC==9.1.1
+pyobjc-framework-ApplicationServices==9.1.1
+pyobjc-framework-AppTrackingTransparency==9.1.1
+pyobjc-framework-AudioVideoBridging==9.1.1
+pyobjc-framework-AuthenticationServices==9.1.1
+pyobjc-framework-AutomaticAssessmentConfiguration==9.1.1
+pyobjc-framework-Automator==9.1.1
+pyobjc-framework-AVFoundation==9.1.1
+pyobjc-framework-AVKit==9.1.1
+pyobjc-framework-AVRouting==9.1.1
+pyobjc-framework-BackgroundAssets==9.1.1
+pyobjc-framework-BusinessChat==9.1.1
+pyobjc-framework-CalendarStore==9.1.1
+pyobjc-framework-CallKit==9.1.1
+pyobjc-framework-CFNetwork==9.1.1
+pyobjc-framework-ClassKit==9.1.1
+pyobjc-framework-CloudKit==9.1.1
+pyobjc-framework-Cocoa==9.1.1
+pyobjc-framework-Collaboration==9.1.1
+pyobjc-framework-ColorSync==9.1.1
+pyobjc-framework-Contacts==9.1.1
+pyobjc-framework-ContactsUI==9.1.1
+pyobjc-framework-CoreAudio==9.1.1
+pyobjc-framework-CoreAudioKit==9.1.1
+pyobjc-framework-CoreBluetooth==9.1.1
+pyobjc-framework-CoreData==9.1.1
+pyobjc-framework-CoreHaptics==9.1.1
+pyobjc-framework-CoreLocation==9.1.1
+pyobjc-framework-CoreMedia==9.1.1
+pyobjc-framework-CoreMediaIO==9.1.1
+pyobjc-framework-CoreMIDI==9.1.1
+pyobjc-framework-CoreML==9.1.1
+pyobjc-framework-CoreMotion==9.1.1
+pyobjc-framework-CoreServices==9.1.1
+pyobjc-framework-CoreSpotlight==9.1.1
+pyobjc-framework-CoreText==9.1.1
+pyobjc-framework-CoreWLAN==9.1.1
+pyobjc-framework-CryptoTokenKit==9.1.1
+pyobjc-framework-DataDetection==9.1.1
+pyobjc-framework-DeviceCheck==9.1.1
+pyobjc-framework-DictionaryServices==9.1.1
+pyobjc-framework-DiscRecording==9.1.1
+pyobjc-framework-DiscRecordingUI==9.1.1
+pyobjc-framework-DiskArbitration==9.1.1
+pyobjc-framework-DVDPlayback==9.1.1
+pyobjc-framework-EventKit==9.1.1
+pyobjc-framework-ExceptionHandling==9.1.1
+pyobjc-framework-ExecutionPolicy==9.1.1
+pyobjc-framework-ExtensionKit==9.1.1
+pyobjc-framework-ExternalAccessory==9.1.1
+pyobjc-framework-FileProvider==9.1.1
+pyobjc-framework-FileProviderUI==9.1.1
+pyobjc-framework-FinderSync==9.1.1
+pyobjc-framework-FSEvents==9.1.1
+pyobjc-framework-GameCenter==9.1.1
+pyobjc-framework-GameController==9.1.1
+pyobjc-framework-GameKit==9.1.1
+pyobjc-framework-GameplayKit==9.1.1
+pyobjc-framework-HealthKit==9.1.1
+pyobjc-framework-ImageCaptureCore==9.1.1
+pyobjc-framework-IMServicePlugIn==9.1.1
+pyobjc-framework-InputMethodKit==9.1.1
+pyobjc-framework-InstallerPlugins==9.1.1
+pyobjc-framework-InstantMessage==9.1.1
+pyobjc-framework-Intents==9.1.1
+pyobjc-framework-IntentsUI==9.1.1
+pyobjc-framework-IOBluetooth==9.1.1
+pyobjc-framework-IOBluetoothUI==9.1.1
+pyobjc-framework-IOSurface==9.1.1
+pyobjc-framework-iTunesLibrary==9.1.1
+pyobjc-framework-KernelManagement==9.1.1
+pyobjc-framework-LatentSemanticMapping==9.1.1
+pyobjc-framework-LaunchServices==9.1.1
+pyobjc-framework-libdispatch==9.1.1
+pyobjc-framework-libxpc==9.1.1
+pyobjc-framework-LinkPresentation==9.1.1
+pyobjc-framework-LocalAuthentication==9.1.1
+pyobjc-framework-LocalAuthenticationEmbeddedUI==9.1.1
+pyobjc-framework-MailKit==9.1.1
+pyobjc-framework-MapKit==9.1.1
+pyobjc-framework-MediaAccessibility==9.1.1
+pyobjc-framework-MediaLibrary==9.1.1
+pyobjc-framework-MediaPlayer==9.1.1
+pyobjc-framework-MediaToolbox==9.1.1
+pyobjc-framework-Metal==9.1.1
+pyobjc-framework-MetalFX==9.1.1
+pyobjc-framework-MetalKit==9.1.1
+pyobjc-framework-MetalPerformanceShaders==9.1.1
+pyobjc-framework-MetalPerformanceShadersGraph==9.1.1
+pyobjc-framework-MetricKit==9.1.1
+pyobjc-framework-MLCompute==9.1.1
+pyobjc-framework-ModelIO==9.1.1
+pyobjc-framework-MultipeerConnectivity==9.1.1
+pyobjc-framework-NaturalLanguage==9.1.1
+pyobjc-framework-NetFS==9.1.1
+pyobjc-framework-Network==9.1.1
+pyobjc-framework-NetworkExtension==9.1.1
+pyobjc-framework-NotificationCenter==9.1.1
+pyobjc-framework-OpenDirectory==9.1.1
+pyobjc-framework-OSAKit==9.1.1
+pyobjc-framework-OSLog==9.1.1
+pyobjc-framework-PassKit==9.1.1
+pyobjc-framework-PencilKit==9.1.1
+pyobjc-framework-PHASE==9.1.1
+pyobjc-framework-Photos==9.1.1
+pyobjc-framework-PhotosUI==9.1.1
+pyobjc-framework-PreferencePanes==9.1.1
+pyobjc-framework-PushKit==9.1.1
+pyobjc-framework-Quartz==9.1.1
+pyobjc-framework-QuickLookThumbnailing==9.1.1
+pyobjc-framework-ReplayKit==9.1.1
+pyobjc-framework-SafariServices==9.1.1
+pyobjc-framework-SafetyKit==9.1.1
+pyobjc-framework-SceneKit==9.1.1
+pyobjc-framework-ScreenCaptureKit==9.1.1
+pyobjc-framework-ScreenSaver==9.1.1
+pyobjc-framework-ScreenTime==9.1.1
+pyobjc-framework-ScriptingBridge==9.1.1
+pyobjc-framework-SearchKit==9.1.1
+pyobjc-framework-Security==9.1.1
+pyobjc-framework-SecurityFoundation==9.1.1
+pyobjc-framework-SecurityInterface==9.1.1
+pyobjc-framework-ServiceManagement==9.1.1
+pyobjc-framework-SharedWithYou==9.1.1
+pyobjc-framework-SharedWithYouCore==9.1.1
+pyobjc-framework-ShazamKit==9.1.1
+pyobjc-framework-Social==9.1.1
+pyobjc-framework-SoundAnalysis==9.1.1
+pyobjc-framework-Speech==9.1.1
+pyobjc-framework-SpriteKit==9.1.1
+pyobjc-framework-StoreKit==9.1.1
+pyobjc-framework-SyncServices==9.1.1
+pyobjc-framework-SystemConfiguration==9.1.1
+pyobjc-framework-SystemExtensions==9.1.1
+pyobjc-framework-ThreadNetwork==9.1.1
+pyobjc-framework-UniformTypeIdentifiers==9.1.1
+pyobjc-framework-UserNotifications==9.1.1
+pyobjc-framework-UserNotificationsUI==9.1.1
+pyobjc-framework-VideoSubscriberAccount==9.1.1
+pyobjc-framework-VideoToolbox==9.1.1
+pyobjc-framework-Virtualization==9.1.1
+pyobjc-framework-Vision==9.1.1
+pyobjc-framework-WebKit==9.1.1
+pypandoc==1.11
+pyparsing==3.0.9
+pytesseract==0.3.10
+python-dateutil==2.8.2
+python-docx==0.8.11
+python-dotenv==1.0.0
+python-magic==0.4.27
+python-multipart==0.0.6
+python-pptx==0.6.21
+pytz==2023.3
+PyYAML==6.0
+regex==2023.3.23
+requests==2.28.2
+rfc3986==1.5.0
+rich==13.0.1
+scikit-learn==1.2.2
+scipy==1.10.1
+sentence-transformers==2.2.2
+sentencepiece==0.1.98
+six==1.16.0
+sniffio==1.3.0
+sounddevice==0.4.6
+SQLAlchemy==1.4.47
+starlette==0.26.1
+sympy==1.11.1
+tenacity==8.2.2
+threadpoolctl==3.1.0
+tiktoken==0.3.3
+timm==0.6.13
+tokenizers==0.13.3
+torch==2.0.0
+torchvision==0.15.1
+tqdm==4.65.0
+transformers==4.28.1
+typing-inspect==0.8.0
+typing_extensions==4.5.0
+unstructured==0.5.9
+unstructured-inference==0.2.4
+urllib3==1.26.15
+uvicorn==0.21.1
+uvloop==0.17.0
+Wand==0.6.11
+watchfiles==0.19.0
+wavio==0.0.7
+websockets==11.0.2
+wrapt==1.14.1
+XlsxWriter==3.1.0
+yarl==1.9.1
+zstandard==0.21.0
